--- a/src/styles/views/signup.scss
+++ b/src/styles/views/signup.scss
@@ -64,6 +64,7 @@
 
   .signup-content {
     @extend %flex-col;
+    @extend %flex-align-center;
     height: 100vh;
 
     @media (max-width: #{$minimum-screen-width + 72}) {
